webview-ui/src/diagnostics_panel/App.css
main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  height: 100%;
}

.dropdown-container {
  box-sizing: border-box;
  display: flex;
  flex-flow: column nowrap;
  align-items: flex-start;
  justify-content: flex-start;
}

.dropdown-container label {
  display: block;
  color: var(--vscode-foreground);
  cursor: pointer;
  font-size: var(--vscode-font-size);
  line-height: normal;
  margin-bottom: 2px;
}

.minecraft-statistic-stacked-line-chart-figure {
  max-width: initial;
}

.minecraft-statistic-stacked-line-chart-figure tspan {
  fill: black;
}

.minecraft-statistic-stacked-line-chart-swatches {
  font-family: system-ui, sans-serif;
  font-size: 10px;
  margin-bottom: 0.5em;
}

.minecraft-statistic-stacked-line-chart-swatch>svg {
  margin-right: 0.5em;
  overflow: visible;
}

.minecraft-statistic-stacked-line-chart-swatches-wrap {
  display: flex;
  align-items: center;
  /* min-height: 33px; */
  flex-wrap: wrap;
}

.minecraft-statistic-stacked-line-chart-swatches-wrap .minecraft-statistic-stacked-line-chart-swatch {
  display: inline-flex;
  align-items: center;
  margin-right: 1em;
}

.minecraft-statistic-stacked-bar-chart-figure {
  max-width: initial;
}

.minecraft-statistic-stacked-bar-chart-swatches {
  font-family: system-ui, sans-serif;
  font-size: 10px;
  margin-bottom: 0.5em;
}

.minecraft-statistic-stacked-bar-chart-swatch>svg {
  margin-right: 0.5em;
  overflow: visible;
}

.minecraft-statistic-stacked-bar-chart-swatches-wrap {
  display: flex;
  align-items: center;
  /* min-height: 33px; */
  flex-wrap: wrap;
}

.minecraft-statistic-stacked-bar-chart-swatches-wrap .minecraft-statistic-stacked-bar-chart-swatch {
  display: inline-flex;
  align-items: center;
  margin-right: 1em;
}

.minecraft-statistic-stacked-bar-chart tspan {
  fill: black;
}

.line-chart-figure {
  max-width: initial;
}

.difference-chart-figure {
  max-width: initial;
}

